# ppx_graphql

./: .gitignore  .travis.yml  CHANGES.md  README.md  dune-project  ppx_graphql.opam
examples/: dune  github.ml  jbuild
src/: dune  introspection.ml  jbuild  ppx_graphql.ml
test/: dune  integration_test.ml  jbuild  parsing_test.ml  schema.graphql  schema.json  test.ml
