opam-version: "1.2"
maintainer: "Andreas Garnaes <andreas.garnaes@gmail.com>"
authors: "Andreas Garnaes <andreas.garnaes@gmail.com>"
homepage: "https://github.com/andreas/ppx_graphql"
doc: "https://andreas.github.io/ppx_graphql/"
bug-reports: "https://github.com/andreas/ppx_graphql/issues"
dev-repo: "https://github.com/andreas/ppx_graphql.git"
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {>= "2.0"}
  "graphql"
  "yojson"
  "ppx_metaquot"
  "alcotest" {test & >= "0.4.5"}
]
